webadmin: fix jquery and Co. with new wicket
wicket 6.9.x comes with own jquery library.
remove the old version. Update pages to use
included version. Update page rendering to
include required scripts.

This change fixes regressions introduced by
migrating to wicket 6.9.1 [55f703e].

Acked-by: Albert Rossi
Target: master, 2.7
Require-book: no
Require-notes: no

--- a/modules/dcache-webadmin/src/main/resources/org/dcache/webadmin/view/pages/tapetransferqueue/TapeTransferQueue.html
+++ b/modules/dcache-webadmin/src/main/resources/org/dcache/webadmin/view/pages/tapetransferqueue/TapeTransferQueue.html
@@ -11,7 +11,7 @@
 <wicket:extend>
     <h1><wicket:message key="header1"></wicket:message></h1>
     <span wicket:id="feedback"/>
-    <table class="sortable">
+    <table id="sortable">
         <thead>
             <tr>
                 <th><wicket:message key="TapeTransferQueue.pnfsid.header"></wicket:message></th>
