--- a/modules/dcache-webadmin/src/main/resources/org/dcache/webadmin/view/panels/poollist/PoolListPanel.html
+++ b/modules/dcache-webadmin/src/main/resources/org/dcache/webadmin/view/panels/poollist/PoolListPanel.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <wicket:panel>
-    <table class="sortable">
+    <table id="sortable">
         <thead>
             <tr>
                 <th wicket:id="selectBoxHeader"/>
